Report 'transparent' border color correctly.  b=188465  r=caillon  sr=bzbarsky